# agent-studio-open

./: .gitignore  .open-studio-platform-sync.json  .vercelignore  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  README.md  SECURITY.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vercel.demo.json  vercel.json  vite.config.ts  vitest.config.ts
.github/workflows/: dco.yml  release.yml
app/src/: App.css  App.tsx  adapters.ts  data.ts  exportArtifacts.ts  main.tsx  platformBridge.ts  platformIntake.ts  platformTelemetry.ts  runtimeBridge.ts  runtimeModels.ts  store.ts  types.ts  updater.ts
app/src/__tests__/: app.test.tsx  exportArtifacts.test.ts  hostedBoundary.test.ts  platformBridge.test.ts  platformIntake.test.ts  platformTelemetry.test.ts  runtimeModels.test.ts  studioLogic.test.ts
cli/: README.md  pyproject.toml
cli/scripts/: benchmark_cli_runtime.py  benchmark_desktop_core.py  benchmark_trace_store.py  release_preflight.py
cli/src/agentstudio/: __init__.py  cli.py  exports.py  importers.py  mcp.py  models.py  otlp_receiver.py  sidecar.py  sidecar_worker.py  trace_store.py
cli/tests/: test_agentstudio_cli.py
cli/tests/fixtures/: mcp_stdio_server.py  openai_events.jsonl  otlp_trace.json  passing-agent-card.json  passing-transcript.json  phoenix_export.json
cli/tests/fixtures/regressions/: refund.assertions.yaml  refund.json
config/: platform-inheritance.json
crates/auraone-platform-keychain/: Cargo.toml
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: agentstudio.rs  lib.rs  main.rs
public/: site.webmanifest
scripts/: audit_accessibility.mjs  benchmark_packaged_startup.mjs  benchmark_ui_overhead.mjs  capture_provenance.mjs  capture_provenance.test.mjs  capture_screenshots.mjs  publish-update-manifest.sh
vscode/: LICENSE  README.md  package.json  tsconfig.json
vscode/src/: extension.ts  vscode.d.ts
web/: README.md
web/src/: browserEdition.ts
