[package]
name = "auraone-platform-keychain"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/auraoneai/agent-studio-open"

[dependencies]
aes-gcm = "0.10.3"
base64 = "0.22.1"
rand = "0.8.5"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
thiserror = "2.0.17"

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3.6.3", default-features = false, features = ["apple-native"] }

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3.6.3", default-features = false, features = ["windows-native"] }

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3.6.3", default-features = false, features = ["sync-secret-service", "crypto-rust"] }

[dev-dependencies]
tempfile = "3.23.0"
